[gd_scene load_steps=3 format=3 uid="uid://cg3hylang5fxn"]

[ext_resource type="Script" uid="uid://c8plt18rbjh5i" path="res://main.gd" id="1_j0gfq"]

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
resource_local_to_scene = true
font_size = 24
font_color = Color(1, 0, 0, 1)

[node name="Main" type="Node2D" node_paths=PackedStringArray("texture_rect", "status_label", "data_label", "stats_label", "start_stop_button", "exhaling_label")]
script = ExtResource("1_j0gfq")
texture_rect = NodePath("TextureRect")
status_label = NodePath("StatusLabel")
data_label = NodePath("DataLabel")
stats_label = NodePath("StatsLabel")
start_stop_button = NodePath("StartStopButton")
exhaling_label = NodePath("ExhalingLabel")

[node name="StatusLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = 22.0
offset_right = 1154.0
offset_bottom = 251.0
text = "Camera not connected"
horizontal_alignment = 1

[node name="DataLabel" type="Label" parent="."]
offset_left = 63.0
offset_top = 241.0
offset_right = 413.0
offset_bottom = 591.0
text = "[Camera data]"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="."]
offset_left = 765.0
offset_top = 200.0
offset_right = 1115.0
offset_bottom = 600.0
text = "[Image Stats]"
horizontal_alignment = 1

[node name="ExhalingLabel" type="Label" parent="."]
offset_top = 525.0
offset_right = 1150.0
offset_bottom = 645.0
text = "NOT EXHALING"
label_settings = SubResource("LabelSettings_0xm2m")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 422.0
offset_top = 177.0
offset_right = 742.0
offset_bottom = 497.0

[node name="StartStopButton" type="Button" parent="."]
offset_left = 101.0
offset_top = 87.0
offset_right = 387.0
offset_bottom = 175.0
disabled = true
toggle_mode = true
text = "Start camera"

[node name="OptionButton" type="OptionButton" parent="."]
visible = false
offset_left = 71.0
offset_top = 330.0
offset_right = 401.0
offset_bottom = 393.0
selected = 0
item_count = 18
popup/item_0/text = "WHITEHOT"
popup/item_0/id = 0
popup/item_1/text = "BLACKHOT"
popup/item_1/id = 1
popup/item_2/text = "SPECTRA"
popup/item_2/id = 2
popup/item_3/text = "PRISM"
popup/item_3/id = 3
popup/item_4/text = "TYRIAN"
popup/item_4/id = 4
popup/item_5/text = "IRON"
popup/item_5/id = 5
popup/item_6/text = "AMBER"
popup/item_6/id = 6
popup/item_7/text = "HI"
popup/item_7/id = 7
popup/item_8/text = "HILO"
popup/item_8/id = 8
popup/item_9/text = "IRON2"
popup/item_9/id = 9
popup/item_10/text = "GREEN"
popup/item_10/id = 10
popup/item_11/text = "RECON"
popup/item_11/id = 11
popup/item_12/text = "BLACK_RECON"
popup/item_12/id = 12
popup/item_13/text = "USER0"
popup/item_13/id = 13
popup/item_14/text = "USER1"
popup/item_14/id = 14
popup/item_15/text = "USER2"
popup/item_15/id = 15
popup/item_16/text = "USER3"
popup/item_16/id = 16
popup/item_17/text = "USER4"
popup/item_17/id = 17

[node name="FlipXCheckButton" type="CheckButton" parent="."]
visible = false
offset_left = 87.0
offset_top = 429.0
offset_right = 177.0
offset_bottom = 460.0
text = "Flip X"

[node name="FlipYCheckButton" type="CheckButton" parent="."]
visible = false
offset_left = 88.0
offset_top = 470.0
offset_right = 178.0
offset_bottom = 501.0
text = "Flip Y"

[node name="ImageSmoothing" type="CheckButton" parent="."]
visible = false
offset_left = 88.0
offset_top = 516.0
offset_right = 220.0
offset_bottom = 547.0
text = "Smoothing"

[node name="Shutter" type="CheckButton" parent="."]
visible = false
offset_left = 87.0
offset_top = 565.0
offset_right = 219.0
offset_bottom = 596.0
button_pressed = true
text = "Shutter"

[connection signal="toggled" from="StartStopButton" to="." method="_on_button_toggled"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="FlipXCheckButton" to="." method="_on_flip_x_check_button_toggled"]
[connection signal="toggled" from="FlipYCheckButton" to="." method="_on_flip_y_check_button_toggled"]
[connection signal="toggled" from="ImageSmoothing" to="." method="_on_image_smoothing_toggled"]
[connection signal="toggled" from="Shutter" to="." method="_on_shutter_toggled"]
